--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.3.jar')
     compile files('libs/zxing.jar')
     compile files('libs/gson-2.2.1.jar')
+    compile project(':slidelibrary')
 }
